--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/cli": "^1.2.1",
+    "@capacitor/core": "^1.2.1",
     "@ionic/core": "^4.10.0",
     "@ionic/vue": "0.0.4",
     "core-js": "^2.6.5",
