--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/cli": "^1.2.1",
     "@capacitor/core": "^1.2.1",
     "@ionic/core": "^4.10.0",
+    "@ionic/pwa-elements": "^1.4.1",
     "@ionic/vue": "0.0.4",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
